--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,44 @@
 alembic==1.13.1
+aniso8601==9.0.1
 blinker==1.7.0
-click==8.1.7
+cachelib==0.13.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==7.1.2
 colorama==0.4.6
-Flask==3.0.3
-Flask-Migrate==4.0.7
-Flask-SQLAlchemy==3.1.1
+Faker==25.0.0
+Flask==1.1.4
+Flask-Caching==1.11.1
+Flask-Flash==2.0.0
+Flask-HTTPAuth==4.8.0
+flask-marshmallow==0.10.0
+Flask-Migrate==2.7.0
+Flask-RESTful==0.3.10
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+Flask-SSLify==0.1.5
 greenlet==3.0.3
 gunicorn==22.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.3
+idna==3.7
+inflect==7.2.1
+itsdangerous==1.1.0
+Jinja2==2.11.3
 Mako==1.3.3
 MarkupSafe==2.1.5
+marshmallow==2.15.0
+marshmallow-sqlalchemy==0.13.2
+more-itertools==10.2.0
+numpy==1.26.4
 packaging==24.0
 psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
+six==1.16.0
 SQLAlchemy==2.0.29
+typeguard==4.2.1
 typing_extensions==4.11.0
-Werkzeug==3.0.2
+urllib3==2.2.1
+Werkzeug==0.16.0
 wfastcgi==3.0.0
